--- a/packages/proto/public/styles/page.css
+++ b/packages/proto/public/styles/page.css
@@ -6,6 +6,10 @@ h1 {
     text-align: center;
     color: var(--color-text-bigheader);
 }
+h2 {
+    color: var(--color-text);
+    text-align: left;
+}
 p {
     color: var(--color-text);
 }
