--- a/packages/proto/public/styles/tokens.css
+++ b/packages/proto/public/styles/tokens.css
@@ -7,7 +7,7 @@
     --font-family-body: "Ubuntu", sans-serif;
     --font-family-display: "Lato", sans-serif;
     --font-weight: 700;
-    --font-size: 50px;
+    --font-size: 60px;
 
     --border-width: 550px;
     --border-padding: 10px;
@@ -26,7 +26,7 @@
     --grid-whole-span: 1/ -1;
 
     --header-span: auto / span 12;
-    --inner-box-span: auto / span 10;
+    --inner-box-span: 2 / span 10;
 
     --gap-padding: 10px;
 }
