--- a/packages/proto/public/styles/tokens.css
+++ b/packages/proto/public/styles/tokens.css
@@ -23,6 +23,7 @@
 
     --text-center: center;
     --margin-center: 0 auto;
+    --margin-spacing: 30px;
 
     --size-spacing-large: 1em;
     --size-spacing-medium: 0.5rem;
